[package]
name = "frame"
version = "0.3.4"
edition = "2021"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/frame"
homepage = "https://github.com/pic16f877ccs/frame"
license = "GPL-3.0-or-later"
description = "Display text in a frame"
keywords = ["text", "format", "text-frame"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.1.9" }
colored = "2.0.0"
terminal_size = "0.2.6"
textwrap = "0.16.0"
